@@ -3,7 +3,8 @@
 # $Id$
 #
 # Usage: nbspmtrplotdat [-o outputfile [-b basedir] [-d subdir]] \
-#			[-m marker] [-n numpoints] [-f datafile] <station>
+#			[-m marker] [-n numpoints] [-r] \
+#                       [-f datafile] <station>
 #
 # Without options, the data is written to stdout. Otherwise, 
 # the tool will cd to the "basedir", create "subdir", and save
@@ -12,13 +13,35 @@
 # by the setting of the variable $metarfilter(plotnumpoints).
 # The number can be specified with [-n] option. The [-m] option specifies
 # a marker to use when the slp is missing. (See sanity_check() below.)
-
+#
+# If a station name given in the argument then the data file is searched
+# in the "Metarweather" utility data directory. Otherwise a data file
+# can be given with the -f option, in the same format:
+#
+#    TJSJ 020056Z 00000KT 10SM SCT031 BKN110 2 7/20 A2997
+#    TJSJ 012356Z 07007KT 10SM SCT031 BKN110 2
+#
+# The Metarweather files are assumed to be in reverse chronological order
+# while any other data file (via -f) is assumed  to be in the standerd
+# chronological order. The -r option can be used to revert this interpretation
+# in both cases.
+#
 package require fileutil;
 package require cmdline;
+
 set usage {nbspmtrplotdat [-o outputfile [-b basedir] [-d subdir]]
-    [-n numpoints] [-f datafile] <station>};
-set optlist {{o.arg ""} {b.arg ""} {d.arg ""} {n.arg ""} {f.arg ""}
-    {m.arg "na"}};
+    [-n numpoints] [-f datafile] [-r] <station>};
+
+set optlist {r {b.arg ""} {d.arg ""} {f.arg ""} {m.arg "na"}
+    {n.arg ""} {o.arg ""}};
+
+proc err {s} {
+
+    global argv0;
+
+    puts "Error: $s";
+    exit 1;
+}
 
 proc sanity_check dataline {
 #
@@ -37,11 +60,11 @@ proc sanity_check dataline {
     return 0;
 }
 
-proc convert_list {origlist numpoints slp_missing_mark} {
+proc convert_list {origlist numpoints slp_missing_mark revert_order} {
 #
 # The data file is split into lines, and the list of lines is passed
-# to this function. The original file has the lines in reverse
-# chronological order (metar file list) so here we rearrange that and
+# to this function. If the original file has the lines in reverse
+# chronological order (metarweather file list) here we rearrange that and
 # also eliminate lines that duplicate the data for a given hour.
 # The function returns the new list, with each field separated by a space
 # (for gnuplot). In addition to the original fields, two calculated
@@ -73,7 +96,11 @@ proc convert_list {origlist numpoints slp_missing_mark} {
 	    lappend a [format "%.2f" [expr [lindex $a 7] * 33.8639]];
 	    lappend a [relative_humidity [lindex $a 5] [lindex $a 6]];
 
-	    set newlist [linsert $newlist 0 [join $a " "]];
+	    if {$revert_order == 1} {
+		set newlist [linsert $newlist 0 [join $a " "]];
+	    } else {
+		lappend newlist [join $a " "];
+	    }
 
 	    incr i;
 	    if {($numpoints > 0) && ($i == $numpoints)} {
@@ -143,8 +170,7 @@ proc relative_humidity {T D} {
 ## The common defaults
 set _defaultsfile "/usr/local/etc/nbsp/filters.conf";
 if {[file exists ${_defaultsfile}] == 0} {
-    puts "${_defaultsfile} not found.";
-    return 1;
+    err "${_defaultsfile} not found.";
 }
 source ${_defaultsfile};
 unset _defaultsfile;
@@ -153,8 +179,7 @@ unset _defaultsfile;
 # and therefore it is in a separate file that is read by both.
 set metar_init_file [file join $common(libdir) metarfilter.init];
 if {[file exists $metar_init_file] == 0} {
-    puts "$metar_init_file not found.";
-    return 1;
+    err "$metar_init_file not found.";
 }
 source $metar_init_file;
 unset metar_init_file;
@@ -162,8 +187,7 @@ unset metar_init_file;
 array set option [::cmdline::getoptions argv $optlist $usage];
 set argc [llength $argv];
 if {$argc != 1} {
-    puts $usage;
-    exit 1;
+    err $usage;
 } else {
     set station [lindex $argv 0];
 }
@@ -173,11 +197,18 @@ if {$option(f) eq ""} {
     append fname $station $metarfilter(mwfext); 
     set datafile [exec find $dir -name $fname];
     if {$datafile eq ""} {
-	puts "$fname not found in $dir.";
-	exit 1;
+	err "$fname not found in $dir.";
+    }
+    set revert_order 1;
+    if {$option(r) == 1} {
+	set revert_order 0;
     }
 } else {
     set datafile $option(f);
+    set revert_order 0;
+    if {$option(r) == 1} {
+	set revert_order 1;
+    }
 }
 
 set numpoints $metarfilter(plotnumpoints);
@@ -187,10 +218,9 @@ if {$option(n) eq ""} {
 
 set body [exec nbspmtrd -t -d $datafile];
 set lineslist [split $body "\n"];
-set newlist [convert_list $lineslist $numpoints $option(m)];
+set newlist [convert_list $lineslist $numpoints $option(m) $revert_order];
 if {[llength $newlist] == 0} {
-    puts "No useful data in $datafile.";
-    exit 1;
+    err "No useful data in $datafile.";
 }
 set newbody [join $newlist "\n"];
 
@@ -219,6 +249,5 @@ set status [catch {
 } errmsg];
 
 if {$status != 0} {
-    puts $errmsg;
-    exit 1;
+    err $errmsg;
 }
