@@ -126,3 +126,4 @@
 
 2.2.2.r4
 - nbspmtrd (Coesmetic change: Corrected optlist)
+- nbspmtrplotdat revised
